Regression: Curve selection more does not highlight curves #123325

Closed
opened 2024-06-17 17:59:35 +02:00 by Lukas Tönne · 5 comments
Member

Blender Version
Broken: 4.3 main
Worked:

Short description of error
Curve edit mode shows selection in point mode, but not curve mode.

Point Selection mode Curve selection Mode
image image

Exact steps for others to reproduce the error

  1. Add Fur to the default cube
  2. Enter edit mode.
  3. Press A to select everything
  4. Compare point and curve selection modes.
**Blender Version** Broken: 4.3 main Worked: **Short description of error** Curve edit mode shows selection in point mode, but not curve mode. | Point Selection mode | Curve selection Mode | | -- | -- | | ![image](/attachments/6df2cfb8-dc69-4d1e-bdaf-4cdccaff634f) | ![image](/attachments/7e1f0af9-a530-484c-94df-50afc7df3c14) | **Exact steps for others to reproduce the error** 1. Add _Fur_ to the default cube 2. Enter edit mode. 3. Press A to select everything 4. Compare _point_ and _curve_ selection modes.
490 KiB
513 KiB
Lukas Tönne added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-06-17 17:59:36 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
Interest
Viewport & EEVEE
labels 2024-06-17 18:01:17 +02:00
Member

Yes, can confirm. Selection overlay works in 4.1

Yes, can confirm. Selection overlay works in 4.1
Iliya Katushenock changed title from Curve selection more does not highlight curves to Regression: Curve selection more does not highlight curves 2024-06-18 11:05:40 +02:00
Iliya Katushenock added this to the 4.2 LTS milestone 2024-06-18 11:05:42 +02:00

Probably can ping @laurynas here /

Probably can ping @laurynas here /
Member

Broke between e4e4b51c833f - 02a488d0fe2e
maybe 15dbfe54e4 ?

Broke between `e4e4b51c833f - 02a488d0fe2e` maybe 15dbfe54e4 ?
Contributor

It must have hapend with this 15dbfe54e4, as from here handles are drawn only for Bezier and NURBS.
@JacquesLucke can I return handle polyline for CURVE_TYPE_POLY and CURVE_TYPE_CATMULL_ROM in point and curve modes?
Something smarter would take more effort and it will have to be rewritten in a future to outline curves instead of handles, so I'd go easy way.

Broke between e4e4b51c833f - 02a488d0fe2e
maybe 15dbfe54e4 ?

Yes

It must have hapend with this 15dbfe54e4, as from here handles are drawn only for Bezier and NURBS. @JacquesLucke can I return handle polyline for `CURVE_TYPE_POLY` and `CURVE_TYPE_CATMULL_ROM` in point and curve modes? Something smarter would take more effort and it will have to be rewritten in a future to outline curves instead of handles, so I'd go easy way. > Broke between `e4e4b51c833f - 02a488d0fe2e` > maybe 15dbfe54e4 ? Yes
Member

can I return handle polyline for CURVE_TYPE_POLY and CURVE_TYPE_CATMULL_ROM in point and curve modes?

Sry, I'm not sure what you mean exactly, if it's an easy way, just create a PR, thanks :)

> can I return handle polyline for CURVE_TYPE_POLY and CURVE_TYPE_CATMULL_ROM in point and curve modes? Sry, I'm not sure what you mean exactly, if it's an easy way, just create a PR, thanks :)
Clément Foucault added the
Interest
Overlay
label 2024-06-18 15:31:00 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-19 18:31:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#123325
No description provided.